<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
>
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.opertusmundi</groupId>
	<artifactId>opertus-mundi-api-gateway-parent</artifactId>
	<version>1.2.0</version>
	<name>[opertus-mundi] API Gateway Parent</name>

	<packaging>pom</packaging>

	<url>https://www.opertusmundi.eu/</url>

	<properties>
		<!-- Project properties -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<dependency.locations.enabled>false</dependency.locations.enabled>
		<java.version>17</java.version>

		<!-- Node.js -->
		<node.version>v10.16.3</node.version>

		<!-- Dependency versions -->
		<spring-boot.version>2.7.3</spring-boot.version>

		<java-commons.version>1.1.0</java-commons.version>

		<!-- Plugin versions -->
		<maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
		<maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
		<maven-surefire-report-plugin.version>3.0.0-M5</maven-surefire-report-plugin.version>
	</properties>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.3</version>
		<relativePath />
	</parent>

	<modules>
		<module>common</module>
		<module>api-gateway</module>
	</modules>

	<developers>
		<developer>
			<id>jkouvar</id>
			<name>Yannis Kouvaras</name>
			<email>jkouvar at imis.athena-innovation.gr</email>
		</developer>
	</developers>

	<organization>
		<name>IMIS, Institute for the Management of Information Systems</name>
		<url>http://www.ipsyp.gr/en</url>
	</organization>

	<scm>
		<url>https://github.com/opertusmundi/api-gateway</url>
		<connection>scm:git:git@github.com:opertusmundi/api-gateway.git</connection>
		<developerConnection>scm:git:git@github.com:opertusmundi/api-gateway.git</developerConnection>
	</scm>


	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter</artifactId>
				<version>${spring-boot.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-starter-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>eu.opertusmundi</groupId>
				<artifactId>opertus-mundi-common</artifactId>
				<version>${java-commons.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<systemProperties>
							<property>
								<name>log4j.configurationFile</name>
								<value>classpath:log4j2-testing.xml</value>
							</property>
						</systemProperties>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven-failsafe-plugin.version}</version>
					<configuration>
						<systemProperties>
							<property>
								<name>log4j.configurationFile</name>
								<value>classpath:log4j2-testing.xml</value>
							</property>
						</systemProperties>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>${maven-surefire-report-plugin.version}</version>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>


	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
				<reportSets>
					<reportSet>
						<reports></reports>
					</reportSet>
				</reportSets>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

</project>
